improve module and container reflection code